@@ -1,7 +1,7 @@
 
 # The igraph interface
 
-export(graph.empty, add.edges, add.vertices, delete.edges,
+export(add.edges, add.vertices, delete.edges,
        delete.vertices, vcount, ecount, neighbors)
 
 # Attributes
@@ -137,3 +137,4 @@ export(cliques, largest.cliques, maximal.cliques, clique.number,
        maximal.independent.vertex.sets, independence.number)
 
 
+######################## REST IS GENERATED BY inger.py
