@@ -1087,25 +1087,6 @@ int R_SEXP_to_igraph_es(SEXP rit, igraph_t *graph, igraph_es_t *it) {
 
 /*******************************************************************/
 
-SEXP R_igraph_empty(SEXP pn, SEXP pdirected) {
-  
-  SEXP result;
-  igraph_integer_t n=REAL(pn)[0];
-  igraph_bool_t directed=LOGICAL(pdirected)[0];
-  igraph_t g;
-
-  R_igraph_before();
-  
-  igraph_empty(&g, n, directed);  
-  PROTECT(result=R_igraph_to_SEXP(&g));
-  igraph_destroy(&g);
-
-  R_igraph_after();
-
-  UNPROTECT(1);
-  return result;
-}
-
 SEXP R_igraph_add_edges(SEXP graph, SEXP edges) {
   
   igraph_vector_t v;			/* do NOT destroy! */
@@ -5169,3 +5150,9 @@ SEXP R_igraph_independence_number(SEXP graph) {
   UNPROTECT(1);
   return result;
 }
+
+/***********************************************/
+/* THE REST IS GENERATED BY inger.py           */
+/***********************************************/
+
+
