@@ -1,3 +1,10 @@
+2007-01-14  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/src/rinterface.c.in (R_igraph_empty) : removed,
+	this is now autogenerated
+	* interface/R/igraph/R/interface.R (graph.empty) : removed,
+	this is now autogenerated
+
 2007-01-07  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/cliques.R (cliques, largest.cliques)
